--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@auth/core": "0.37.0",
+    "@convex-dev/auth": "^0.0.90",
     "@convex-dev/react-query": "0.0.0-alpha.11",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.16",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/db": "^0.4.3",
     "@tanstack/query-db-collection": "^0.2.0",
@@ -22,11 +26,15 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "convex": "^1.27.3",
-    "lucide-react": "^0.544.0",
+    "lucide-react": "^0.552.0",
+    "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.0.6",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.16",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.0.14"
   },
@@ -39,6 +47,7 @@
     "@vitejs/plugin-react": "^5.0.4",
     "babel-plugin-react-compiler": "^1.0.0",
     "jsdom": "^27.0.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
