--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.31.0",
+    "framer-motion": "^12.23.26",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.552.0",
     "postcss": "^8.5.6",
     "react": "^19.2.1",
